--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.0",
     "vite": "^7.1.7"
-  }
+  },
+  "description": "",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
