--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,10 +24,17 @@ jobs:
         env:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
         run: |
-          # The -A flag enables SSH agent forwarding
           ssh -A deploy@62.72.12.249 "
             cd /home/deploy/app && \
             git fetch origin main && \
             git reset --hard origin/main && \
+            
+            # --> YEH DO NAYI LINES HAIN <--
+            echo '>>> Installing dependencies...' && \
+            npm install && \
+            echo '>>> Building application for production...' && \
+            npm run build && \
+            
+            echo '>>> Building and starting Docker containers...' && \
             docker compose build --build-arg VITE_API_BASE_URL=${VITE_API_BASE_URL} && \
             docker compose up -d"
