--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "framer-motion": "^10.16.5",
     "html2pdf.js": "^0.12.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^6.20.1",
     "recharts": "^3.2.0"
   },
