--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^10.16.5",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.294.0",
