--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_BASE_URL=http://62.72.12.249:4500
+VITE_API_BASE_URL=http://localhost:4500
 
 # App Configuration
 VITE_APP_NAME=ANOCAB CRM
