--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,10 @@ jobs:
           VITE_API_BASE_URL: ${{ secrets.VITE_API_BASE_URL }}
         run: |
           ssh -A deploy@62.72.12.249 "
+            echo '>>> Testing SSH connection to GitHub...'
+            ssh -T git@github.com
+
+            echo '>>> Now attempting git fetch...'
             cd /home/deploy/app && \
             git fetch origin main && \
             git reset --hard origin/main && \
