--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,13 @@
 server {
-  listen 80;
-  server_name localhost;
+    listen 80;
+    
+    # Static files ko yahaan se serve karein
+    root /usr/share/nginx/html;
+    index index.html index.htm;
 
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
-  }
+    # React/Vue routing ke liye:
+    # Agar file nahi milti hai, to index.html par bhej dein
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
 }
