--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "framer-motion": "^10.16.5",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.12.0",
